gen/StringParser.java
// Generated from /home/mrbig/Projects/compiler/grammar/StringParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class StringParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, FOR=3, WHILE=4, END=5, BOOL=6, INT=7, STR=8, LIST=9, TRUE=10, 
		FALSE=11, NOT=12, AND=13, OR=14, FUNC=15, RETURN=16, LEN=17, IN=18, EQ=19, 
		LESS=20, GREATER=21, PRINT=22, SUM=23, MULT=24, ASSIGN=25, NAME=26, STRING=27, 
		NUMBER=28, BOOLEAN=29, COMMA=30, OPEN_PARANTHESIS=31, CLOSE_PARANTHESIS=32, 
		OPEN_SQUARE_BRACKET=33, CLOSE_SQUARE_BRACKET=34, OPEN_TRIANGLE_BRACKET=35, 
		CLOSE_TRIANGLE_BRACKET=36, SEP_SLICE=37, BEGIN=38, RET_TYPE=39, OPERATOR_DEL=40, 
		DIGIT=41, COMMENT=42, WS=43;
	public static final int
		RULE_program = 0, RULE_expression = 1, RULE_function = 2, RULE_param_def = 3, 
		RULE_operators = 4, RULE_instruction = 5, RULE_if_instruction = 6, RULE_then_block = 7, 
		RULE_else_block = 8, RULE_for_instruction = 9, RULE_while_instruction = 10, 
		RULE_definition_instruction = 11, RULE_assign_instruction = 12, RULE_print = 13, 
		RULE_return_instruction = 14, RULE_operation = 15, RULE_function_call = 16, 
		RULE_get_item = 17, RULE_get_slice = 18, RULE_item_index1 = 19, RULE_item_index2 = 20, 
		RULE_param_list = 21, RULE_len_function = 22, RULE_condition = 23, RULE_logical_conj = 24, 
		RULE_logical_factor = 25, RULE_negation = 26, RULE_type = 27, RULE_list = 28, 
		RULE_operand = 29, RULE_name = 30, RULE_ident = 31, RULE_array = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expression", "function", "param_def", "operators", "instruction", 
			"if_instruction", "then_block", "else_block", "for_instruction", "while_instruction", 
			"definition_instruction", "assign_instruction", "print", "return_instruction", 
			"operation", "function_call", "get_item", "get_slice", "item_index1", 
			"item_index2", "param_list", "len_function", "condition", "logical_conj", 
			"logical_factor", "negation", "type", "list", "operand", "name", "ident", 
			"array"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'else'", "'for'", "'while'", "'end'", "'bool'", "'int'", 
			"'str'", "'list'", "'true'", "'false'", "'not'", "'and'", "'or'", "'func'", 
			"'return'", "'len'", "'in'", "'eq'", "'ls'", "'gr'", "'print'", "'+'", 
			"'*'", "'='", null, null, null, null, "','", "'('", "')'", "'['", "']'", 
			"'<'", "'>'", "':'", null, "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "FOR", "WHILE", "END", "BOOL", "INT", "STR", "LIST", 
			"TRUE", "FALSE", "NOT", "AND", "OR", "FUNC", "RETURN", "LEN", "IN", "EQ", 
			"LESS", "GREATER", "PRINT", "SUM", "MULT", "ASSIGN", "NAME", "STRING", 
			"NUMBER", "BOOLEAN", "COMMA", "OPEN_PARANTHESIS", "CLOSE_PARANTHESIS", 
			"OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", "OPEN_TRIANGLE_BRACKET", 
			"CLOSE_TRIANGLE_BRACKET", "SEP_SLICE", "BEGIN", "RET_TYPE", "OPERATOR_DEL", 
			"DIGIT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "StringParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public StringParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<TerminalNode> OPERATOR_DEL() { return getTokens(StringParser.OPERATOR_DEL); }
		public TerminalNode OPERATOR_DEL(int i) {
			return getToken(StringParser.OPERATOR_DEL, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringParserVisitor ) return ((StringParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
			case FOR:
			case WHILE:
			case BOOL:
			case INT:
			case STR:
			case LIST:
			case FUNC:
			case RETURN:
			case LEN:
			case PRINT:
			case NAME:
			case STRING:
			case NUMBER:
			case BOOLEAN:
			case OPEN_SQUARE_BRACKET:
			case OPERATOR_DEL:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==OPERATOR_DEL) {
					{
					{
					setState(66);
					match(OPERATOR_DEL);
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(74);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case IF:
						case FOR:
						case WHILE:
						case BOOL:
						case INT:
						case STR:
						case LIST:
						case RETURN:
						case LEN:
						case PRINT:
						case NAME:
						case STRING:
						case NUMBER:
						case BOOLEAN:
						case OPEN_SQUARE_BRACKET:
							{
							setState(72);
							expression();
							}
							break;
						case FUNC:
							{
							setState(73);
							function();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(76);
						match(OPERATOR_DEL);
						}
						} 
					}
					setState(82);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(85);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IF:
				case FOR:
				case WHILE:
				case BOOL:
				case INT:
				case STR:
				case LIST:
				case RETURN:
				case LEN:
				case PRINT:
				case NAME:
				case STRING:
				case NUMBER:
				case BOOLEAN:
				case OPEN_SQUARE_BRACKET:
					{
					setState(83);
					expression();
					}
					break;
				case FUNC:
					{
					setState(84);
					function();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==OPERATOR_DEL) {
					{
					{
					setState(87);
					match(OPERATOR_DEL);
					}
					}
					setState(92);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringParserVisitor ) return ((StringParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				instruction();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				operation(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(StringParser.FUNC, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode OPEN_PARANTHESIS() { return getToken(StringParser.OPEN_PARANTHESIS, 0); }
		public Param_defContext param_def() {
			return getRuleContext(Param_defContext.class,0);
		}
		public TerminalNode CLOSE_PARANTHESIS() { return getToken(StringParser.CLOSE_PARANTHESIS, 0); }
		public TerminalNode BEGIN() { return getToken(StringParser.BEGIN, 0); }
		public OperatorsContext operators() {
			return getRuleContext(OperatorsContext.class,0);
		}
		public TerminalNode END() { return getToken(StringParser.END, 0); }
		public TerminalNode RET_TYPE() { return getToken(StringParser.RET_TYPE, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringParserVisitor ) return ((StringParserVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(FUNC);
			setState(101);
			name();
			setState(102);
			match(OPEN_PARANTHESIS);
			setState(103);
			param_def();
			setState(104);
			match(CLOSE_PARANTHESIS);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RET_TYPE) {
				{
				setState(105);
				match(RET_TYPE);
				setState(106);
				type();
				}
			}

			setState(109);
			match(BEGIN);
			setState(110);
			operators();
			setState(111);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_defContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(StringParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(StringParser.COMMA, i);
		}
		public Param_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).enterParam_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).exitParam_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringParserVisitor ) return ((StringParserVisitor<? extends T>)visitor).visitParam_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Param_defContext param_def() throws RecognitionException {
		Param_defContext _localctx = new Param_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << STR) | (1L << LIST))) != 0)) {
				{
				setState(113);
				type();
				setState(114);
				name();
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(115);
					match(COMMA);
					setState(116);
					type();
					setState(117);
					name();
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorsContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> OPERATOR_DEL() { return getTokens(StringParser.OPERATOR_DEL); }
		public TerminalNode OPERATOR_DEL(int i) {
			return getToken(StringParser.OPERATOR_DEL, i);
		}
		public OperatorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).enterOperators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).exitOperators(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringParserVisitor ) return ((StringParserVisitor<? extends T>)visitor).visitOperators(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorsContext operators() throws RecognitionException {
		OperatorsContext _localctx = new OperatorsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operators);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(126);
					expression();
					setState(127);
					match(OPERATOR_DEL);
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << BOOL) | (1L << INT) | (1L << STR) | (1L << LIST) | (1L << RETURN) | (1L << LEN) | (1L << PRINT) | (1L << NAME) | (1L << STRING) | (1L << NUMBER) | (1L << BOOLEAN) | (1L << OPEN_SQUARE_BRACKET))) != 0)) {
				{
				setState(134);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public If_instructionContext if_instruction() {
			return getRuleContext(If_instructionContext.class,0);
		}
		public For_instructionContext for_instruction() {
			return getRuleContext(For_instructionContext.class,0);
		}
		public While_instructionContext while_instruction() {
			return getRuleContext(While_instructionContext.class,0);
		}
		public Definition_instructionContext definition_instruction() {
			return getRuleContext(Definition_instructionContext.class,0);
		}
		public Assign_instructionContext assign_instruction() {
			return getRuleContext(Assign_instructionContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public Return_instructionContext return_instruction() {
			return getRuleContext(Return_instructionContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringParserVisitor ) return ((StringParserVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_instruction);
		try {
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				if_instruction();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				for_instruction();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				while_instruction();
				}
				break;
			case BOOL:
			case INT:
			case STR:
			case LIST:
				enterOuterAlt(_localctx, 4);
				{
				setState(140);
				definition_instruction();
				}
				break;
			case NAME:
			case STRING:
			case NUMBER:
			case BOOLEAN:
			case OPEN_SQUARE_BRACKET:
				enterOuterAlt(_localctx, 5);
				{
				setState(141);
				assign_instruction();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 6);
				{
				setState(142);
				print();
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 7);
				{
				setState(143);
				return_instruction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_instructionContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(StringParser.IF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<TerminalNode> BEGIN() { return getTokens(StringParser.BEGIN); }
		public TerminalNode BEGIN(int i) {
			return getToken(StringParser.BEGIN, i);
		}
		public Then_blockContext then_block() {
			return getRuleContext(Then_blockContext.class,0);
		}
		public TerminalNode END() { return getToken(StringParser.END, 0); }
		public TerminalNode ELSE() { return getToken(StringParser.ELSE, 0); }
		public Else_blockContext else_block() {
			return getRuleContext(Else_blockContext.class,0);
		}
		public If_instructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).enterIf_instruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).exitIf_instruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringParserVisitor ) return ((StringParserVisitor<? extends T>)visitor).visitIf_instruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_instructionContext if_instruction() throws RecognitionException {
		If_instructionContext _localctx = new If_instructionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_if_instruction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(IF);
			setState(147);
			condition();
			setState(148);
			match(BEGIN);
			setState(149);
			then_block();
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(150);
				match(ELSE);
				setState(151);
				match(BEGIN);
				setState(152);
				else_block();
				}
			}

			setState(155);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Then_blockContext extends ParserRuleContext {
		public OperatorsContext operators() {
			return getRuleContext(OperatorsContext.class,0);
		}
		public Then_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_then_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).enterThen_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).exitThen_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringParserVisitor ) return ((StringParserVisitor<? extends T>)visitor).visitThen_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Then_blockContext then_block() throws RecognitionException {
		Then_blockContext _localctx = new Then_blockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_then_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			operators();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_blockContext extends ParserRuleContext {
		public OperatorsContext operators() {
			return getRuleContext(OperatorsContext.class,0);
		}
		public Else_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).enterElse_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).exitElse_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringParserVisitor ) return ((StringParserVisitor<? extends T>)visitor).visitElse_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Else_blockContext else_block() throws RecognitionException {
		Else_blockContext _localctx = new Else_blockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_else_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			operators();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_instructionContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(StringParser.FOR, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(StringParser.COMMA, 0); }
		public TerminalNode BEGIN() { return getToken(StringParser.BEGIN, 0); }
		public OperatorsContext operators() {
			return getRuleContext(OperatorsContext.class,0);
		}
		public TerminalNode END() { return getToken(StringParser.END, 0); }
		public OperandContext operand() {
			return getRuleContext(OperandContext.class,0);
		}
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public For_instructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).enterFor_instruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).exitFor_instruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringParserVisitor ) return ((StringParserVisitor<? extends T>)visitor).visitFor_instruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final For_instructionContext for_instruction() throws RecognitionException {
		For_instructionContext _localctx = new For_instructionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_for_instruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(FOR);
			setState(162);
			name();
			setState(163);
			match(COMMA);
			setState(166);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(164);
				operand();
				}
				break;
			case 2:
				{
				setState(165);
				operation(0);
				}
				break;
			}
			setState(168);
			match(BEGIN);
			setState(169);
			operators();
			setState(170);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_instructionContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(StringParser.WHILE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(StringParser.BEGIN, 0); }
		public OperatorsContext operators() {
			return getRuleContext(OperatorsContext.class,0);
		}
		public TerminalNode END() { return getToken(StringParser.END, 0); }
		public While_instructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).enterWhile_instruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StringParserListener ) ((StringParserListener)listener).exitWhile_instruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StringParserVisitor ) return ((StringParserVisitor<? extends T>)visitor).visitWhile_instruction(this);
			else return visitor.visitChildren(this);
		}
	}
